#open and #close too big, fixing it

--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,7 @@ nav > ul {
 }
 
 #open, #close{
-    height: 40px;
+    height: 30px;
     filter: brightness(0%);
 }
 .sidebar{
